Fix groupview spacing

--- a/src/components/HomeRoutes/Groups/groups.scss
+++ b/src/components/HomeRoutes/Groups/groups.scss
@@ -8,6 +8,7 @@
 .groups-header {
   font-size: 24px;
   font-weight: 700;
+  margin-top: 28px;
 }
 
 
@@ -31,7 +32,6 @@
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
   justify-content: center;
   padding: 12px;
   color: white;
